--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,16 +4,18 @@
 :root{
     /* colors */
     --header-height:3.5rem;
-    --hue-color: 190;
-    --first-color: ;
-    --first-color-second: ;
-    --first-color-alt: ;
-    --title-color: ;
-    --text-color: hsl(var(--hue-color), 24%, 35%);
-    --text-color-light: ;
-    --input-color: ;
+    --hue-color: 352;
+    --first-color: hsl(var(--hue-color), 100%, 37%);
+    --first-color-second: hsl(var(--hue-color), 64%, 22%) ;
+    --first-color-alt:hsl(var(--hue-color), 64%, 15%);
+    --title-color:hsl(var(--hue-color), 100%, 37%);
+    --text-color: hsl(var(--hue-color), 100%, 35%);
+    --text-color-light:hsl(var(--hue-color), 99%, 71%);
+    --input-color: hsl(var(--hue-color), 24%, 97%);
     --body-color:hsl(var(--hue-color), 100%, 99%);
     --white-color: #fff;
+    --scroll-bar-color:hsl(var(--hue-color), 12%, 90%);
+    --scroll-thumb-color: hsl(var(--hue-color), 12%, 75%);
 
     /* font-family */
     --body-font:'Open Sans', sans-serif;
@@ -147,3 +149,78 @@ input{
     gap:1.5rem;
 }
 
+.header{
+    background-color: var(--first-color);
+    width: 100%;
+    position: fixed;
+    top:0;
+    left:0;
+    z-index: var(--z-fixed);
+}
+
+.nav{
+    height: var(--header-height);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav__logo, .nav__toggle{
+    color: var(--white-color);
+}
+
+.nav__logo{
+    font-weight:var(--font-semi-bold);
+}
+
+.nav__toggle{
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+.nav__menu{
+    position:relative;
+}
+
+@media screen and (max-width:767px){
+    .nav__menu{
+        position: fixed;
+        background-color: var(--body-color);
+        top: 0;
+        right: -100%;
+        width: 70%;
+        height: 100%;
+        box-shadow: -1px 0 4px hsla(var(--hue-color), 100%, 37%, .15);
+        padding: 3rem;
+        transition: .4s;
+    }
+}
+
+.nav__list{
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.5rem;
+}
+
+.nav__link{
+    color:var(--text-color-light);
+    font-weight: var(--font-semi-bold);
+    text-transform: uppercase;
+}
+
+.nav__link:hover{
+    color: var(--text-color);
+}
+
+.nav__close{
+    position: absolute;
+    top:.75rem;
+    right: 1rem;
+    font-size: 1.5rem;
+    color: var(--title-color);
+    cursor: pointer;
+}
+
+.show-menu{
+    right: 0;
+}
