--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,11 @@
 
 :root{
     /* colors */
-    --header-height:3.5rem;
-    --hue-color: 352;
-    --first-color: hsl(var(--hue-color), 100%, 37%);
+    --header-height:3rem;
+    --hue-color: 1;
+    --first-color:  #f25477;
     --first-color-second: hsl(var(--hue-color), 64%, 22%) ;
-    --first-color-alt:hsl(var(--hue-color), 64%, 15%);
+    --first-color-alt:  #ec275f;
     --title-color:hsl(var(--hue-color), 100%, 37%);
     --text-color: hsl(var(--hue-color), 100%, 35%);
     --text-color-light:hsl(var(--hue-color), 99%, 71%);
@@ -16,6 +16,7 @@
     --white-color: #fff;
     --scroll-bar-color:hsl(var(--hue-color), 12%, 90%);
     --scroll-thumb-color: hsl(var(--hue-color), 12%, 75%);
+    --home-info:linear-gradient(to top, #0979b7 0%, #ebf4fc 100%);
 
     /* font-family */
     --body-font:'Open Sans', sans-serif;
@@ -126,6 +127,10 @@ input{
     outline: none;
 }
 
+.main{
+    overflow-x: hidden;
+}
+
 .section{
     padding: 4.5rem 0 2.5rem;
 }
@@ -150,12 +155,12 @@ input{
 }
 
 .header{
-    background-color: var(--first-color);
     width: 100%;
     position: fixed;
     top:0;
     left:0;
     z-index: var(--z-fixed);
+    background-color: transparent;
 }
 
 .nav{
@@ -223,4 +228,122 @@ input{
 
 .show-menu{
     right: 0;
+}
+
+.home__img{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    object-position: 50%;
+}
+
+.home__container{
+    position: relative;
+    height: calc(100vh - var(--header-height));
+    align-content: center;
+    row-gap: 3rem;
+}
+
+.home__data-title, .home__data-subtitle, .home__info, .home__social-link{
+    color:var(--white-color);
+}
+
+.home__data-subtitle {
+    display: block;
+    font-weight: var(--font-semi-bold);
+    margin-bottom: var(--mb-0-75);
+}
+  
+.home__data-title {
+    font-size: var(--biggest-font-size);
+    font-weight: var(--font-medium);
+    margin-bottom: var(--mb-2-5);
+}
+.home__social {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.5rem;
+}
+.home__social-link{
+    font-size: 1.2rem;
+    width: max-content;
+}
+
+#facebook:hover{
+    color: #3a5898;
+}
+
+#instagram:hover{
+    color:#fe3464;
+}
+
+#twitter:hover{
+    color:#55d4fd;
+}
+
+.home__info{
+    background-image: var(--home-info);
+    display: flex;
+    padding: 1.5rem 1rem;
+    align-items: center;
+    column-gap: .5rem;
+    position: absolute;
+    right: 0;
+    bottom: 1rem;
+    width: 228px;
+}
+
+.home__info-title{
+    display: block;
+    font-size: var(--small-font-size);
+    font-weight: var(--font-semi-bold);
+    margin-bottom: var(--mb-0-75);
+}
+
+.home__info-button{
+    font-size: var(--smaller-font-size);
+}
+
+.home__info-overlay{
+    overflow: var(--img-hidden);
+}
+
+.home__info-img{
+    width: 145px;
+    transition: var(--img-transition);
+}
+
+.home__info-img:hover{
+    transform: var(--img-scale);
+}
+
+.button{
+    display: inline-block;
+    background-color: var(--first-color);
+    color:var(--white-color);
+    padding: 1rem 2rem;
+    font-weight: var(--font-semi-bold);
+    transition: .3s;
+}
+
+.button:hover{
+    background-color: var(--first-color-alt);
+}
+
+.button--flex{
+    display: flex;
+    align-items: center;
+    column-gap: .25rem;
+}
+
+.button-link{
+    background:none;
+    padding: 0;
+}
+
+.button-link:hover{
+    background: none;
 }
