--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,7 @@ button, input{
 
 button{
     cursor: pointer;
+    border-radius: 3px;
 }
 
 input{
@@ -336,6 +337,7 @@ input{
     padding: 1rem 2rem;
     font-weight: var(--font-semi-bold);
     transition: .3s;
+    border-radius: 5px;
 }
 
 .button:hover{
@@ -546,6 +548,13 @@ input{
     align-self: flex-end;
     display: flex;
     align-items: center;
+    font-weight: var(--font-semi-bold);
+    cursor: pointer;
+    
+}
+
+.place__rating:hover{
+    color:var(--first-color);
 }
 
 .place__rating-icon{
@@ -576,6 +585,7 @@ input{
     right: 0;
     bottom: 0;
     padding: .75rem 1rem;
+    border-radius: 5px 0 0 0;
 }
 
 .place__img{
