--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@
     --facebook-color:#3a5898;
     --instagram-color:#fe3464;
     --twitter-color:#55d4fd;
+    --exp-card: #f7e1e4;
     --white-color: #fff;
     --home-info:linear-gradient(to top, #0979b7 0%, #ebf4fc 100%);
     --hue-color: 1;
@@ -59,6 +60,9 @@
     --img-transition:.3s;
     --img-hidden:hidden;
     --img-scale:scale(1.1);
+    --exp-transition: transform .5s ease-in-out;
+    --exp-scale:scaleX(0);
+    --exp-scale-hover:scaleX(1);
 }
 
 @media screen and (min-width:968px){
@@ -456,6 +460,10 @@ input{
     padding: 0 2rem;
 }
 
+.experience__data{
+    text-align: center;
+}
+
 .experience__number{
     font-size: var(--h2-font-size);
     font-weight: var(--font-semi-bold);
@@ -468,32 +476,112 @@ input{
 
 .experience__img{
     position: relative;
-    padding-bottom: 2rem;
+    padding: 0 2rem;
+    grid-template-columns: repeat(2,1fr);
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
 }
 
-.experience__overlay:nth-child(1){
-    width: 263px;
-    margin-right: 2rem;
+.experience__card{
+    position: relative;
+    width: 210px;
+    height: 210px;
+    margin-bottom: var(--mb-0-25);
+    overflow: var(--img-hidden);
+    background: pink;
 }
 
-.experience__overlay:nth-child(2){
-    width: 120px;
+.experience__overlay, .experience__content-box{
     position: absolute;
-    top: 2rem;
-    right: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
-.experience__img-one, .experience__img-two{
+.experience__picture{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 50%;
     transition: var(--img-transition);
 }
 
+.experience__content-box::before{
+    content: '';
+    background: var(--exp-card);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: var(--exp-scale);
+    transition: var(--exp-transition);
+    transform-origin: left;
+}
 
-.experience__img-one:hover, .experience__img-two:hover{
+
+.experience__card:hover .experience__content-box::before{
+    transform: var(--exp-scale-hover);
+    transition: var(--exp-transition);
+    transform-origin: left;
+}
+.experience__box-two::before{
+    transform-origin: right;
+}
+
+.experience__card:hover .experience__box-two::before{
+    transform-origin: right;
+}
+
+.experience__card:hover .experience__box-three::before{
+    transform-origin: left;
+}
+
+.experience__card .experience__content-box{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.experience__info{
+    position: relative;
+    padding: 2rem;
+    z-index: 1;
+    transition: var(--img-transition);
+    transition-delay: 0;
+    transform: translateX(-200px);
+}
+
+.experience__card:hover .experience__info{
+    transform: translateX(0px);
+    transition-delay: .3s;
+}
+
+.info-two{
+    transform: translateX(200px);
+}
+
+.experience__picture:hover{
     transform: var(--img-scale);
 }
 
-.experience__overlay{
-    overflow: var(--img-hidden);
+.experience__card-title{
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+.experience__card-description{
+    font-size: var(--normal-font-size);
 }
 
 .video__container{
@@ -600,6 +688,7 @@ input{
     width: 100%;
 }
 
+
 .place__card:hover .place__img{
     transform: var(--img-scale);
 }
@@ -608,6 +697,7 @@ input{
     background-color: var(--first-color-second);
     padding: 2.5rem 0;
 }
+
 
 .subscribe__title, .subscribe__description{
     color:var(--white-color)
