Feat: Sponsors Section Design

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -725,3 +725,19 @@ input{
 .subscribe__input::placeholder{
     color: var(--text-color-light);
 }
+
+.sponsor__container{
+    grid-template-columns: repeat(auto-fit, minmax(110px,1fr));
+    justify-content: center;
+    gap:3.5rem;
+}
+
+.sponsor__img{  
+    width: 90px;
+    filter: invert(.7);
+    transition: var(--img-transition);
+}
+
+.sponsor__content:hover .sponsor__img{ 
+    filter: invert(.5);
+}
