--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -814,3 +814,28 @@ input{
 .footer__terms-link:hover{
     color: var(--text-color);
 }
+
+.scrollup{
+    position: fixed;
+    right: 1rem;
+    bottom: -20%;
+    background-color: var(--first-color);
+    padding: .5rem;
+    display: flex;
+    opacity: .7;
+    z-index: var(--z-tooltip);
+    transition: .4s;
+}
+
+.scrollup__icon{
+    color: var(--white-color);
+}
+
+.scrollup:hover{
+    background-color: var(--first-color-alt);
+    opacity: 1;
+}
+
+.show-scroll{
+    bottom: 3rem;
+}
