--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,6 +238,7 @@ input{
     cursor: pointer;
 }
 
+
 .show-menu{
     right: 0;
 }
@@ -249,6 +250,21 @@ input{
 
 .scroll-header .nav__logo, .scroll-header .nav__toggle{
     color:var(--title-color);
+}
+
+.active-link{
+    position: relative;
+    color: var(--title-color);
+}
+
+.active-link::before{
+    content: '';
+    position: absolute;
+    background-color: var(--title-color);
+    width: 100%;
+    height: 2px;
+    bottom: -.75rem;
+    left: 0;
 }
 
 .home__img{
