--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -855,3 +855,16 @@ input{
 .show-scroll{
     bottom: 3rem;
 }
+
+::-webkit-scrollbar{
+    width: 0.6rem;
+    background-color: var(--scroll-bar-color);
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: var(--scroll-thumb-color);
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background-color: var(--text-color-light);
+}
