--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,38 @@
         --smaller-font-size: .813rem;
     }
 }
+/* Dark Theme */
+
+body.dark-theme{
+    --hue-color: 346;
+    --first-color-second: hsl(var(--hue-color), 41%, 12%);
+    --title-color:hsl(var(--hue-color), 24%, 95%);
+    --text-color: hsl(var(--hue-color), 8%, 75%);
+    --text-color-light:hsl(var(--hue-color), 29%, 71%);
+    --input-color: hsl(var(--hue-color), 29%, 16%);
+    --body-color:hsl(var(--hue-color), 29%, 12%);
+    --scroll-bar-color:hsl(var(--hue-color), 12%, 48%);
+    --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
+}
+
+.nav__dark{
+    display: flex;
+    align-items: center;
+    column-gap: 2rem;
+    position: absolute;
+    left:3rem;
+    bottom:4rem;
+}
+
+.change-theme, .change-theme-name{
+    color: var(--text-color);
+}
+
+.change-theme{
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
 
 *{
 
@@ -868,3 +900,4 @@ input{
 ::-webkit-scrollbar-thumb:hover{
     background-color: var(--text-color-light);
 }
+
