--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@
     --mb-1-5:1.5rem;
     --mb-2:2rem;
     --mb-2-5:2.5rem;
+    --mb-3:3rem;
 
     /* Z-index */
     --z-tooltip:10;
@@ -890,7 +891,7 @@ input{
 }
 
 .show-scroll{
-    bottom: 3rem;
+    bottom: 4rem;
 }
 
 ::-webkit-scrollbar{
@@ -936,3 +937,151 @@ input{
     }
 }
 
+@media screen and (min-width:568px){
+    .video__container{
+        display: grid;
+        grid-template-columns: .6fr;
+        justify-content: center;
+    }
+
+    .place__container{
+        grid-template-columns: repeat( 3, 1fr);
+    }
+
+    .susbcribe__form{
+        width: 470px;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (min-width:768px){
+    body{
+        margin: 0;
+    }
+
+    .nav{
+        height: calc(var(--header-height) + 1.5rem);
+    }
+
+    .nav__link{
+        color:var(--white-color);
+        text-transform: initial;
+    }
+
+    .nav__link:hover{
+        color:var(--white-color);
+    }
+
+    .nav__dark{
+        position: initial;
+    }
+
+    .nav__menu{
+        display: flex;
+        column-gap: 1rem;
+    }
+
+    .nav__list{
+        flex-direction: row;
+        column-gap: 4rem;
+    }
+
+    .nav__toggle, .nav__close{
+        display: none;
+    }
+
+    .change-theme{
+        color: var(--white-color);
+        font-size: 1rem;
+    }
+
+    .active-link::before{
+        background-color: var(--white-color);
+    }
+
+    .scroll-header .nav__link{
+        color:var(--text-color);
+    }
+
+    .scroll-header .active-link{
+        color:var(--title-color);
+    }
+
+    .scroll-header .active-link::before{
+        background-color:var(--title-color);
+    }
+
+    .scroll-header .change-theme{
+        color:var(--text-color);
+    }
+
+    .section{
+        padding: 7rem 0 2rem;
+    }
+
+    .home__container{
+        height: 100vh;
+        grid-template-rows: 1.8fr .5fr;
+    }
+
+    .home__data{
+        align-self: flex-end;
+    }
+
+    .home__social{
+        flex-direction: row;
+        align-self:flex-end;
+        margin-bottom: var(--mb-3);
+        column-gap: 2.5rem;
+    }
+
+    .home__info{
+        bottom:3rem;
+    }
+
+    .about__container{
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+    }
+
+    .about__data, .about__title{
+        text-align: initial;
+    }
+
+    .about__title{
+        margin-bottom: var(--mb-1-5);
+    }
+
+    .about__description{
+        margin-bottom: var(--mb-2);
+    }
+
+    .discover__container{
+        width: 610px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .discover__container, .place__container{
+        padding-top: 2rem;
+    }
+
+    .subscribe__bg{
+        background: none;
+        padding: 0;
+    }
+
+    .subscribe__container{
+        background-color: var(--first-color-second);
+        padding: 3.5rem;
+    }
+
+    .subscribe__input{
+        padding: 0 .5rem;
+    }
+
+    .footer__rights{
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
