Feat: media queries for tall screen desktop/mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1188,3 +1188,14 @@ input{
         max-width: 1024px;
     }
 }
+
+@media screen and (min-height:721px){
+    body{
+        margin: 0;
+    }
+
+    .home__container, .home__img{
+        height: 640px;
+    }
+}
+
