--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ body.dark-theme{
 }
 
 .home__img.dark-theme{
-    background-image: url(../images/home-2.jpeg);
+    background-image: url(../images/home-bg2.jpeg);
 }
 
 
@@ -364,7 +364,7 @@ input{
 }
 
 .home__img{
-    background-image: url(../images/home1.jpeg);
+    background-image: url(../images/home-bg1.jpeg);
     background-position: center;
     background-size: cover;
     position: absolute;
